[aliases]
release = egg_info -RDb ''
bdist = build_sphinx bdist
sdist = build_sphinx sdist
upload = upload upload_docs --upload-dir build/sphinx/html

[bdist_rpm]
doc-files = doc

[wheel]
universal = 1

[tool:pytest]
addopts = 
	--doctest-glob="doc/*.rst"
	--doctest-modules
testpaths = joblib

[flake8]
ignore = E402

[metadata]
license_file = LICENSE.txt

[build_sphinx]
warning-is-error = 1

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

